# sc2-ai-match-controller

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  configmap.yaml  deployment.yaml  grafana-loki.yaml  staging.yaml
.cargo/: config
.github/: dependabot.yml
.github/workflows/: docker.yml  release-prod.yml  release.yml  rust.yml  tag.yaml  test.yml
bot_controller/: Cargo.toml  Dockerfile
bot_controller/src/: docs.rs  main.rs  routes.rs  utils.rs
client_controller/: Cargo.toml  README.md  config.toml
client_controller/src/: config.rs  config.toml  docker.rs  main.rs
client_controller/templates/: docker-compose.yaml
common/: Cargo.toml
common/src/: lib.rs
common/src/api/: mod.rs  process.rs  state.rs
common/src/api/api_reference/: bot_controller_client.rs  mod.rs  sc2_controller_client.rs
common/src/api/api_reference/aiarena/: aiarena_api_client.rs  errors.rs  mod.rs
common/src/api/errors/: app_error.rs  download_error.rs  map_error.rs  mod.rs  process_error.rs
common/src/configuration/: ac_config.rs  mod.rs
common/src/logging/: mod.rs
common/src/models/: mod.rs
common/src/models/aiarena/: aiarena_bot.rs  aiarena_game_result.rs  aiarena_map.rs  aiarena_match.rs  aiarena_result.rs  bot_race.rs  mod.rs
common/src/models/bot_controller/: mod.rs
common/src/models/stats/: mod.rs
common/src/paths/: maps.rs  mod.rs
common/src/procs/: mod.rs  tcp_port.rs
common/src/utilities/: directory.rs  mod.rs
common/src/utilities/portpicker/: mod.rs
common/src/utilities/zip_utils/: mod.rs
configs/: arenaclient.toml  default_config.toml  local.toml
docker/: Dockerfile  docker-compose.yml  supervisord.conf
examples/local-docker-compose/: docker-compose.yml  example-config.toml
k8s_controller/: Cargo.toml  Dockerfile  docker-compose.yml
k8s_controller/configs/: default_config.toml
k8s_controller/src/: arena_api.rs  arenaclient.rs  k8s_config.rs  k8s_processor.rs  main.rs  profile.rs  templating.rs
k8s_controller/templates/: ac-job-strict.yaml  ac-job.yaml
kubernetes/: configmap.yaml  deployment.yaml  grafana-loki.yaml  grafana.yaml
kubernetes/base/: deployment.yaml  kustomization.yaml
kubernetes/overlays/prod/: configmap.yaml  kustomization.yaml
kubernetes/overlays/staging/: configmap.yaml  kustomization.yaml  patch.yaml
match_controller/: Cargo.toml  config.toml
match_controller/src/: main.rs  routes.rs  state.rs
match_controller/src/match_scheduler/: mod.rs
match_controller/src/matches/sources/aiarena_api/: graphql.rs  mod.rs
match_controller/src/matches/sources/file_source/: errors.rs
match_controller/src/matches/sources/test_source/: mod.rs
match_controller/src/mocking/: mod.rs
proxy_controller/: Cargo.toml  Dockerfile
proxy_controller/src/: main.rs  routes.rs  state.rs  ws_routes.rs
proxy_controller/src/api_reference/: bot_controller_client.rs  mod.rs  sc2_controller_client.rs
proxy_controller/src/api_reference/aiarena/: aiarena_api_client.rs
proxy_controller/src/game/: game_config.rs  game_result.rs  mod.rs  player_data.rs  player_result.rs  race.rs  sc2_result.rs
proxy_controller/src/match_scheduler/: mod.rs
proxy_controller/src/matches/: aiarena_result.rs  mod.rs
proxy_controller/src/matches/sources/: mod.rs
proxy_controller/src/matches/sources/aiarena_api/: mod.rs
proxy_controller/src/matches/sources/file_source/: errors.rs  mod.rs
proxy_controller/src/matches/sources/test_source/: mod.rs
proxy_controller/src/mocking/: mod.rs
proxy_controller/src/websocket/: mod.rs  player.rs  port_config.rs  runtime_vars.rs
proxy_controller/src/websocket/errors/: player_error.rs
sc2_controller/: Cargo.toml  Dockerfile  README.md
sc2_controller/src/: docs.rs  logging.rs  main.rs  player_seats.rs  routes.rs  ws_routes.rs
sc2_controller/src/game/: game_config.rs  game_result.rs  mod.rs  player_data.rs  player_result.rs  sc2_result.rs
sc2_controller/src/websocket/: mod.rs  player.rs
sc2_controller/src/websocket/errors/: mod.rs  player_error.rs
testing/: README.md
testing/api-based/: docker-compose.yml  test-config.toml
testing/api-based/responses/: get_match_response.json
testing/bot-controller/: test-matches
testing/file-based/: docker-compose.yml  test-config.toml
testing/file-based-combined/: docker-compose.yml  test-matches
testing/game-rps/: Dockerfile  README.md  bot.sh  game.sh  test-matches
testing/match-controller/: test-config.toml
testing/sc2-controller/: docker-compose.yml  test-config.toml  test-matches
testing/test-api-server/: Cargo.toml
testing/test-api-server/src/: main.rs
