[workspace]
members = [
    "k8s_controller",
    "bot_controller",
    "sc2_controller",
    "proxy_controller",
    "common"
]

[workspace.package]
version = "0.3.4"
authors = ["danielvanschoor1997@gmail.com"]

[workspace.dependencies]
axum = { version = "0.6.2" }
kube = { version = "0.78.0", default-features = false }
k8s-openapi = { version = "0.17.0", default-features = false}
serde_json = "1.0.87"
anyhow = "^1.0.68"
http = "^0.2.8"
tokio = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
serde_yaml = "0.9.16"
chrono = "0.4"
serde = { version = "^1.0" }
common = {path="common"}
tower = { version = "0.4"}
tracing-appender = "0.2.2"
tower-http = { version = "0.3.0" }
parking_lot = {version = "0.12.1"}
futures-util = "0.3.25"
config = { git = "https://github.com/mehcode/config-rs.git" }
utoipa = { version="3.0.0"}
utoipa-swagger-ui = { version="3.0.1" }
reqwest = { version = "0.11.12"}
tokio-util = { version = "0.7.4" }
urlencoding = "2.1.2"
shellexpand = "2.1.2"
regex = "1.7.0"
sysinfo = "0.27.6"
rand = "0.8.5"
async-trait = "0.1.58"
zip = "0.5.13"
bytes = "1.3.0"
netstat2 = "0.9.1"
url = "2.3.1"
tokio-tungstenite = "0.18.0"
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
protobuf = { version = "=3.2.0", features = ["with-bytes"] }
indexmap = { version = "1.9.2", features = ["serde"] }
zip-extensions = "0.6.1"
tempfile = "3.3.0"