[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "2.1.2"
regex = "1.7.0"
# tempfile = "3.3.0"
sysinfo = "0.27.6"
serde = { version = "^1.0", features = ["derive", "rc"] }
config = { git = "https://github.com/mehcode/config-rs.git" }
reqwest = { version = "0.11.12", features=["json", "multipart"]}
rand = "0.8.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.58"
tracing-appender = "0.2.2"
serde_json = "1.0.87"
parking_lot = {version = "0.12.1", features=["deadlock_detection"]}
utoipa = { version="2.4.2", features = ["axum_extras"], optional=true }
utoipa-swagger-ui = { version="3.0.1",  features = ["axum"], optional=true }
zip = "0.5.13"
tokio-util = { version = "0.7.4", features = ["full"] }
bytes = "1.3.0"
netstat2 = "0.9.1"
axum = { version = "0.6.2" }
url = "2.3.1"
urlencoding = "2.1.2"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]

