[package]
name = "common"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = { workspace=true }
regex = { workspace=true }
sysinfo = { workspace=true }
serde = { workspace=true, features = ["derive", "rc"] }
config = { workspace=true}
reqwest = { workspace=true, features=["json", "multipart"]}
rand = { workspace=true }
tokio = { workspace=true, features =["fs"]}
tracing = { workspace=true }
tracing-subscriber = { workspace=true, features = ["env-filter"] }
async-trait = { workspace=true }
tracing-appender = { workspace=true }
serde_json = { workspace=true }
parking_lot = {workspace=true, features=["deadlock_detection"]}
utoipa = { workspace=true, features = ["axum_extras"], optional=true }
utoipa-swagger-ui = { workspace=true,  features = ["axum"], optional=true }
zip = { workspace=true }
tokio-util = { workspace=true, features = ["full"] }
bytes = { workspace=true }
netstat2 = { workspace=true }
axum = { workspace=true }
url = { workspace=true }
urlencoding = { workspace=true }
serde-error = {workspace=true}
#[target.'cfg(not(windows))'.dependencies]
#openssl = { version = "0.10", features = ["vendored"] }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
tempfile = "3.3.0"
bytes = "1.3.0"
fs_extra = "1.2.0"