[package]
name = "common"
version.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.95"
async-process = "2.0.0"
async-trait = "0.1.58"
axum = { version = "0.6.2" }
bytes = "1.3.0"
config = { git = "https://github.com/mehcode/config-rs.git", default-features=false, features=["toml", "async", "json"] }
netstat2 = { git = "https://github.com/danielvschoor/netstat2-rs.git"  }
parking_lot = { version = "0.12.1"}
rand = "0.8.5"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.87"
shellexpand = "3.1.0"
sysinfo = "0.29.0"
tempfile = "3.3.0"
tokio = { version = "1.0", features = ["fs"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.3.1"
urlencoding = "2.1.2"
utoipa = { version = "=3.2.1", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "=3.1.3" , features = ["axum"], optional = true }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
bytes = "1.3.0"
env_logger = "*"
fs_extra = "1.2.0"
httpmock = "0.7.0"
tempfile = "3.3.0"
test-log = { version = "0.2.11", features = ["log"], default-features = false }
