[package]
name = "k8s_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.17.0", default-features = false, features=["v1_24"]}
serde_json = "1.0.87"
anyhow = "^1.0.68"
http = "^0.2.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9.16"
chrono = "0.4"
serde = { version = "^1.0", features = ["derive"] }
common = {path="../common"}
axum = { version = "0.6.2" }
tower = { version = "0.4"}
tracing-appender = "0.2.2"
tower-http = { version = "0.3.0", features = ["add-extension", "trace"] }
parking_lot = {version = "0.12.1", features=["deadlock_detection"]}
futures-util = "0.3.25"
config = { git = "https://github.com/mehcode/config-rs.git" }