[package]
name = "k8s_controller"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { workspace=true, default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { workspace=true, default-features = false, features=["v1_24"]}
serde_json = { workspace=true }
anyhow = { workspace=true }
tokio = { workspace=true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace=true }
serde_yaml = { workspace=true }
chrono = { workspace=true }
serde = { workspace=true, features = ["derive"] }
common = { workspace=true }
axum = { workspace=true }
tower = { workspace=true}
tracing-appender = { workspace=true }
tower-http = { workspace=true, features = ["add-extension", "trace"] }
parking_lot = {workspace=true, features=["deadlock_detection"]}
futures-util = { workspace=true }
config = { workspace=true }