[package]
name = "k8s_controller"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.68"
axum = { version = "0.6.2" }
chrono = "0.4"
common = { path="../common" }
config = { git = "https://github.com/mehcode/config-rs.git", default-features=false, features=["toml"] }
futures-util = "0.3.25"
k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
kube = {  version = "0.84.0", default-features = false, features = ["client", "runtime", "rustls-tls"] }
parking_lot = {version = "0.12.1" }
serde = {  version = "^1.0" }
serde_json = "1.0.87"
serde_yaml = "0.9.16"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = [ "timeout"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"

