[package]
name = "proxy_controller"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
axum = { version = "0.6.2", features = ["ws"] }
bytes = "1.3.0"
common = { path="../common" }
config = { git = "https://github.com/mehcode/config-rs.git" }
futures-util = "0.3.25"
httpmock = { version = "0.6.7", optional = true }
indexmap = { version = "1.9.2", features = ["serde"] }
parking_lot = { version = "0.12.1" }
protobuf = { version = "=3.2.0", features = ["with-bytes"] }
reqwest = { version = "0.11.12", features = [ "stream"] }
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4" }
tower-http = { version = "0.3.0" }
tracing = "0.1"
tracing-appender = "0.2.2"
url = "2.3.1"

[features]
default = []
mockserver = ["httpmock"]

[dev-dependencies]
httpmock = "0.6.7"
