[package]
name = "proxy_controller"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
axum = { version = "0.6.2", features = ["ws"] }
bytes = "1.10.0"
common = { path="../common" }
config = { git = "https://github.com/mehcode/config-rs.git" , default-features=false, features=["toml"]}
clap = {version="4.3.0", features = ["cargo"]}
futures-util = "0.3.25"
httpmock = { version = "0.7.0", optional = true }
indexmap = { version = "2.1.0", features = ["serde"] }
parking_lot = { version = "0.12.1" }
protobuf = { version = "=3.2.0" }
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.0", features = ["time", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20.0"
tower = { version = "0.4", features=["timeout"] }
tower-http = { version = "0.4.0", features=["trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
url = "2.3.1"

[features]
default = []
mockserver = ["httpmock"]

[dev-dependencies]
httpmock = {version="0.7.0"}
