[package]
name = "sc2_controller"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace=true }
utoipa = { workspace=true, features = ["axum_extras"], optional=true }
utoipa-swagger-ui = { workspace=true,  features = ["axum"], optional=true }
axum = { workspace=true }
tokio = { workspace=true}
tower = { workspace=true}
tracing = { workspace=true }
tracing-appender = { workspace=true }
reqwest = { workspace=true, features=["json"]}
tower-http = { workspace=true, features = ["add-extension", "trace"] }
tokio-util = { workspace=true, features = ["full"] }
tempfile = { workspace=true }
async-process = { workspace=true }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]