[package]
name = "sc2_controller"
version.workspace = true
authors.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.0.0"
axum = { version = "0.6.2" }
common = { path="../common" }
clap = {version="4.3.0", features = ["cargo"]}
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.3.0"
tokio = { version = "1.0", features=["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.4", features=["io"]}
tower = { version = "0.4", features=["timeout"] }
tower-http = { version = "0.6.2", features=["trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
utoipa = { version = "=3.2.1" , features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "=3.1.3", features = ["axum"], optional = true }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]
