[package]
name = "sc2_controller"
version.workspace = true
authors.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.0.0"
axum = { version = "0.6.2", features = ["ws"] }
common = { path="../common" }
clap = {version="4.3.0", features = ["cargo"]}
futures-util = "0.3.25"
indexmap = { version = "2.1.0", features = ["serde"] }
once_cell = "1.19.0"
parking_lot = { version = "0.12.1" }
protobuf = { version = "=3.2.0" }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.87"
tempfile = "3.3.0"
tokio = { version = "1.0", features=["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.20.0"
tokio-util = { version = "0.7.4", features=["io"]}
tower = { version = "0.4", features=["timeout"] }
tower-http = { version = "0.4.0", features=["trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
utoipa = { version = "=3.2.1" , features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "=9.0.0", features = ["axum"], optional = true }

[features]
swagger = ["utoipa", "utoipa-swagger-ui"]
